Fix buttons alignment in the post series box for Hebrew (rtl)

--- a/src/components/PostSeriesBox/style.scss
+++ b/src/components/PostSeriesBox/style.scss
@@ -64,10 +64,20 @@
         &__nav {
             &-item {
                 &:nth-child(2) {
-                    text-align: left;
+                    @include ltr {
+                        text-align: left;
+                    }
+                    @include rtl {
+                        text-align: right;
+                    }
                 }
                 &:nth-child(4) {
-                    text-align: right;
+                    @include ltr {
+                        text-align: right;
+                    }
+                    @include rtl {
+                        text-align: left;
+                    }
                 }
             }
         }
